# GameboyEmulator

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: main.cpp  main.h
src/EventHandling/: handleEvents.cpp  handleEvents.h
src/Gameboy/: 16BitArithmetic.cpp  16BitLoads.cpp  8BitLoads.cpp  arithmeticIntructions.cpp  cbInstructions.cpp  controlFlowInstructions.cpp  fetcher.cpp  gameboy.cpp  gameboy.h  gameboyMem.cpp  intructions.cpp  jumpInstructions.cpp  oam.cpp  ppu.cpp  registers.cpp
src/Internal/: fpsHandling.cpp  fpsHandling.h
src/RenderHandling/: handleRendering.cpp  handleRendering.h
tests/arithmeticInstructions/: 16BitArithmeticTests.cpp  arithmeticInstructionsTests.cpp
tests/cbTests/: cbInstructions.cpp
tests/controlFlowTests/: controlFlowTests.cpp
tests/jumpTests/: jumpTests.cpp
tests/loadTests/: 16BitLoadTests.cpp  8BitLoadTests.cpp
